--- a/client/main.css
+++ b/client/main.css
@@ -10,11 +10,10 @@ body {
 }
 
 .Item1 {
-	height:43%;
+	margin-bottom:50px;
 }
 
 .Items { 
-		height:45%;
 		display :	grid;
 					grid-template-columns: 1fr 1fr 1fr;
 					grid-gap: 2em;
@@ -47,7 +46,7 @@ body {
 }
 
 .icon_dayone {
-	width:28%;
+	width:25%;
 }
 
 .icon_days {
